[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "py_turbo"
version = "0.3.0"
authors = [
    { name="Benjamin Ellis", email="benjaminjellis@protonmail.com" },
]
description = "A small example package"v
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/benjaminjellis/turbo"
"Bug Tracker" = "https://github.com/benjaminjellis/turbo/issues"