[package]
name = "turbos3_py"
version = "0.3.3"
rust-version= "1.57.0"
edition = "2021"
authors = ["benjamin ellis <benjaminjellis@protonmail.com>"]
description = "turbocharged S3 uploads and downloads for Python"


[lib]
name = "turbos3_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16", features = ["extension-module"] }
pyo3-asyncio = { version = "0.16", features = ["tokio-runtime"] }
dotenv = "0.15.0"
turbolib = {path = "../turbolib"}
