[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "turbos3_py"
version = "0.3.1"
authors = [
    { name="Benjamin Ellis", email="benjaminjellis@protonmail.com" },
]
description = "Turbocharged S3 downloads and uplaods"
readme = "./README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/benjaminjellis/turbo"
"Bug Tracker" = "https://github.com/benjaminjellis/turbo/issues"